k8s/keycloak/ubuntu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu-pod
  template:
    metadata:
      labels:
        app: ubuntu-pod
    spec:
      containers:
        - name: ubuntu-container
          image: ubuntu/postgres:latest
          command: ["/bin/sleep", "infinity"]
