k8s/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: keycloak
